fixed alignement

--- a/src/components/aboutUsSection/AboutusSection.module.css
+++ b/src/components/aboutUsSection/AboutusSection.module.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   gap: 20px;
   justify-content: center;
+  align-items: center;
 }
 
 .content {
